fix : Controller 바인딩 반영하여 test 수정